backup_individuals/sjeng/use_undefined_identifier/c1/f_in_check
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1320:41: error: use of undeclared identifier 'jpt_401814'
if ( wking_loc + *( _DWORD *)( ( char *)jpt_401814 + v8) == ( _DWORD)target ) 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1365:7: error: use of undeclared identifier 'dword_66359C'
v13 = dword_66359C[wking_loc + v12--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1408:7: error: use of undeclared identifier 'dword_66359C'
v13 = dword_66359C[wking_loc + v12--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1537:8: error: use of undeclared identifier 'dword_66359C'
v18 = &dword_66359C[wking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1635:41: error: use of undeclared identifier 'jpt_401814'
if ( bking_loc + *( _DWORD *)( ( char *)jpt_401814 + v14) == ( _DWORD)target ) 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1680:7: error: use of undeclared identifier 'dword_66359C'
v13 = dword_66359C[bking_loc + v16--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1723:7: error: use of undeclared identifier 'dword_66359C'
v13 = dword_66359C[bking_loc + v16--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/moves.c:1852:8: error: use of undeclared identifier 'dword_66359C'
v29 = &dword_66359C[bking_loc]; 
       ^
8 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/f_in_check/src/obj/moves.o] Error 1
